--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "main": "yarn ts src/main.ts",
-    "ts": "ts-node -P tsconfig.common.json"
+    "main": "yarn ts:esm src/main.ts",
+    "ts:esm": "node --loader ts-node/esm --experimental-specifier-resolution=node"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.145",
     "@types/node": "^17.0.21",
     "prettier": "^2.5.1",
     "remark": "^14.0.2",
