--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@swc/core": "^1.2.145",
+    "@types/glob": "^7.2.0",
     "@types/node": "^17.0.21",
     "prettier": "^2.5.1",
     "remark": "^14.0.2",
