--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@swc/core": "^1.2.145",
     "@types/glob": "^7.2.0",
     "@types/node": "^17.0.21",
+    "@types/url-join": "^4.0.1",
     "prettier": "^2.5.1",
     "remark": "^14.0.2",
     "ts-node": "^10.5.0",
@@ -21,6 +22,7 @@
     "commander": "^9.0.0",
     "glob": "^7.2.0",
     "node-fetch": "^3.2.0",
+    "node-html-parser": "^5.2.0",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "remark-stringify": "^10.0.2",
